--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="shortcut icon" href="0.jpg">
-    <title>Meru</title>
+    <title>thismeru</title>
   </head>
   <body>
     <style>
